# XR_Robot_Dev

./: README.md  instruction.txt
src/arm_A1_Moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_A1_Moveit/config/: arm_desktop_A1.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/arm_A1_Moveit/launch/: arm_desktop_A1_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/arm_desktop_A1/: CMakeLists.txt  package.xml  urdf.rviz
src/arm_desktop_A1/config/: joint_names_arm_desktop_A1.yaml
src/arm_desktop_A1/launch/: display.launch  gazebo.launch
src/arm_desktop_A1/meshes/: L_Link.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  R_Link.STL  base_link.STL
src/arm_desktop_A1/robots/: arm_desktop_A1.urdf
src/demo/: move_mk2_ik.py  moveit_cartesian_demo.py  test.py
src/myarm_a1/: CMakeLists.txt  package.xml  urdf.rviz
src/myarm_a1/config/: joint_names_myarm_a1.yaml
src/myarm_a1/launch/: display.launch  gazebo.launch
src/myarm_a1/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  base_link.STL  left_Link.STL  rigth_Link.STL
src/myarm_a1/urdf/: ikfast61_manipulator.cpp  myarm_a1.urdf
src/myarm_a1_ikfast_manipulator_plugin/: CMakeLists.txt  myarm_a1_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/myarm_a1_ikfast_manipulator_plugin/src/: myarm_a1_manipulator_ikfast_moveit_plugin.cpp
src/myarm_a1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/myarm_a1_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  myarm_a1.srdf  ompl_planning.yaml  ros_controllers.yaml
src/myarm_a1_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  myarm_a1_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/others/: arm.py  moveit_cirale.py
src/xrrobot/: CMakeLists.txt  package.xml
src/xrrobot/launch/: Arduino.launch
src/xrrobot_control/: CMakeLists.txt  package.xml
src/xrrobot_control/src/: robot_demo.py  xrrobt_demo.py
src/xrsolve_ik/xrsolve_ik/: CMakeLists.txt  package.xml
src/xrsolve_ik/xrsolve_ik_kinematics_plugin/: CMakeLists.txt  package.xml  xrsolve_ik_kinematics_description.xml
src/xrsolve_ik/xrsolve_ik_kinematics_plugin/include/xrsolve_ik/: xrsolve_ik_kinematics_plugin.hpp
src/xrsolve_ik/xrsolve_ik_kinematics_plugin/src/: xrsolve_ik_kinematics_plugin.cpp
src/xrsolve_ik/xrsolve_ik_lib/: CMakeLists.txt  package.xml
src/xrsolve_ik/xrsolve_ik_lib/include/xrsolve_ik/: dual_quaternion.h  kdl_tl.hpp  math3d.h  nlopt_ik.hpp  xrsolve_ik.hpp
src/xrsolve_ik/xrsolve_ik_lib/src/: kdl_tl.cpp  nlopt_ik.cpp  xrsolve_ik.cpp
