<?xml version="1.0"?>
<package>
  <name>xrsolve_ik</name>
  <version>1.0.0</version>
  <description>
    XRSOLVE-IK handles
  </description> 
  <maintainer email="flieed@foxmail.com">XRSOLVELabs Robotics</maintainer>
  <author>flieed</author>
  <author>flieed</author>
  <license>BSD</license>

 

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xrsolve_ik_examples</run_depend>
  <run_depend>xrsolve_ik_kinematics_plugin</run_depend>
  <run_depend>xrsolve_ik_lib</run_depend>
  <run_depend>xrsolve_ik_python</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
