<?xml version="1.0"?>
<package>
  <name>xrsolve_ik_lib</name> 
  <version>1.0.0</version>
  <description>
    XRSOLVE-IK
  </description>
  <author>flieed</author>
  <maintainer email="flieed@foxmail.com">XRSOLVELabs Robotics</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>libnlopt-dev</run_depend>
  <run_depend>libnlopt0</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
</package>
